update report Time series

--- a/report.ipynb
+++ b/report.ipynb
@@ -64,21 +64,176 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Research Questions\n"
+        "# Study I: Longitudinal Analysis of Musical Sentiment"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Hypothesis Testing"
+        "# Study II: Economic Volatility and the Decoupling of Cultural Sentiment"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Time Series Analysis"
+        "## Structural Instability in the Streaming Economy: A Time Series Approach\n",
+        "### Motivation and Research Questions\n",
+        "While Study I focused on how music changed, this section shifts to the economic side of the music industry. The COVID-19 pandemic was a health crisis, but it also caused a major shock to the economy.\n",
+        "We wanted to investigate two main questions regarding the financial performance of the sector:\n",
+        "\n",
+        "* How were the stock prices of music streaming companies affected during the COVID-19 period?\n",
+        "* Did Spotify's stock exhibit abnormal volatility or structural changes during the pandemic compared to before?\n",
+        "\n",
+        "We hypothesized that even if the content of the music (sentiment) stayed stable, the market valuation (stock price) would show distinct signs of instability and \"abnormal volatility\" due to the pandemic.\n",
+        "\n",
+        "### Closing Stock Price Inspection\n",
+        "\n",
+        "We first plotted Spotify’s monthly closing stock prices from 2018 to 2021 to get a general sense of how the market behaved over time. \n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/spotify_trend.png} \n",
+        "    \\caption{Original Spotify Stock Price Trend (2018-2021)} \n",
+        "    \\label{fig:spotify} \n",
+        "\\end{figure}\n",
+        "\n",
+        "\n",
+        "From the figure \\ref{fig:spotify}, it is clear that the price does not follow a smooth or consistent linear trend.\n",
+        "\n",
+        "1. We first plotted Spotify’s monthly closing stock prices from 2018 to 2021 to get a general sense of how the market behaved over time. From the figure, it is clear that the price does not follow a smooth or consistent linear trend.\n",
+        "\n",
+        "2. Around the start of the pandemic in early 2020, the pattern changes noticeably. The stock price increases rapidly and in a non-linear way, rising from roughly $150 to above $300 within about a year. This sharp shift suggests a structural break rather than a continuation of the earlier trend.\n",
+        "\n",
+        "That said, a line chart alone cannot tell us whether this growth was smooth or whether it came with increased instability or volatility.\n",
+        "\n",
+        "### Decomposition\n",
+        "\n",
+        "After examining the trend, we knew the price had increased, but we needed to know how it went up. Was it just a normal seasonal thing? Or was something broken? To figure this out, we used ﻿a technique called Additive Decomposition.\n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/decomposition_close_price.png} \n",
+        "    \\caption{decomposition of Spotify Stock Price Trend (2018-2021)} \n",
+        "    \\label{fig:decomp} \n",
+        "\\end{figure}\n",
+        "\n",
+        "We plotted these components in Figure \\ref{fig:decomp}, and here is what we discovered:\n",
+        "\n",
+        "* Trend: This part of the decomposition merely illustrates the general direction. It confirms what we already knew—the price started skyrocketing in 2020. It was not a straight line, instead, it curved upwards very fast.\n",
+        "\n",
+        "* Seasonality: We thought maybe there would be a pattern, like sales going up every Christmas. However, if you examine the y-axis, the numbers are relatively small compared to the trend. The waves are present, but they do not significantly impact the price. This indicates that the substantial price jump was not due to the time of year.\n",
+        "\n",
+        "* Residuals: In a healthy market, residual should be small and randomly scattered around zero. However, upon inspecting the bottom panel, we see a distinct cluster of huge spikes starting in 2020.\n",
+        "\n",
+        "Seeing those big, clustered spikes in the bottom graph proves that the market was not stable. This gave us the proof we needed to say that the volatility was abnormal during COVID.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Data Transformation\n",
+        "We noticed that in the decomposition section, it creates a problem for our modeling. Models like ARIMA assume the data is stationary, which basically means the average and the spread of the data shouldn't change over time. However, looking at our stock price charts, the data clearly breaks this rule. It goes up and down wildly. So, we need to conduct a preprocessing step to make it stationary\n",
+        "\n",
+        "#### Lag & ACF\n",
+        "\n",
+        "We fisrt plotted the Lag Plots and the Autocorrelation Function to look at the internal patterns.\n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/lag.png} \n",
+        "    \\caption{Lag plot of the original time series} \n",
+        "    \\label{fig:lag} \n",
+        "\\end{figure}\n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/acf_lag.png} \n",
+        "    \\caption{autocorrelation function of original ts} \n",
+        "    \\label{fig:acf_lag} \n",
+        "\\end{figure}\n",
+        "\n",
+        "Base on the figures we notices:\n",
+        "\n",
+        "* Lag Plots: Strong positive relationship is observed at lag 1 and lag 2. This means today's price is almost perfectly predicted by yesterday's price. \n",
+        "\n",
+        "\n",
+        "* ACF: The autocorrelation bars decay very slowly and stay outside the confidence bounds for many lags. This usually happens when the data is not stationary and shows strong persistence. In this case, the slow decay likely means that the overall trend is very strong and is affecting the series, making the short-term changes harder to see.\n",
+        "\n",
+        "#### Step 1: Log-Transformation \n",
+        "\n",
+        "The first thing we noticed was the variance. There was a strange pattern here. When the stock price was low in 2018, the movements were pretty small. But once the price became much higher around 2020, the fluctuations also became much bigger.\n",
+        "\n",
+        "To fix this heteroscedasticity, we applied a Logarithmic Transformation.\n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/log_transformation.png} \n",
+        "    \\caption{log transformation of original ts} \n",
+        "    \\label{fig:log} \n",
+        "\\end{figure}\n",
+        "\n",
+        "* The blue line is the original price. You can clearly see the huge, messy spike in 2020 where the variance explodes.\n",
+        "* The orange line is the log-transformed price. It looks much smoother and more consistent.\n",
+        "\n",
+        "Applying a logarithmic transformation reduces the impact of large values by compressing the scale of the data. Price movements are interpreted in relative terms rather than absolute dollar amounts, making the series more suitable for modeling.\n",
+        "\n",
+        "#### Step 2: First-Order Differencing\n",
+        "\n",
+        "At first glance (looking back at log transformation), the log-transformed data (orange line) might appear \"flat\" enough. However, this is deceptive. While the variance was stabilized, the series still retained a deterministic trend—the mean value was drifting upwards over time as the company grew. For an ARIMA model to be valid, the data must not just be stable in width, but also horizontal in direction (stationary mean).\n",
+        "\n",
+        "To rigorously remove this remaining trend, we applied First-Order Differencing.\n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/difference.png} \n",
+        "    \\caption{first difference ts} \n",
+        "    \\label{fig:diff} \n",
+        "\\end{figure}\n",
+        "\n",
+        "By analyzing the change from one month to the next rather than the raw value, we isolated the stochastic component.\n",
+        "\n",
+        "Figure \\ref{fig:diff} confirms the necessity of this step.\n",
+        "\n",
+        "Unlike the log-series which drifted upwards, the differenced series oscillates consistently around zero.\n",
+        "This transformation successfully detrended the data, leaving us with a pure \"growth rate\" metric that satisfies the strict stationarity requirements for autoregressive modeling.\n",
+        "\n",
+        "### Verifying the Result\n",
+        "\n",
+        "We conduct the Augmented Dickey-Fuller (ADF) test on the before and after transformation series:\n",
+        "\n",
+        "**Table: ADF Stationarity Test Comparison**\n",
+        "\n",
+        "| Series | Test Statistic | p-value | Conclusion |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| **Original Stock Price** ($P_t$) | -1.96 | 0.304 | **Non-Stationary** (Fail to reject $H_0$) |\n",
+        "| **Transformed Series** ($\\Delta \\ln P_t$) | **-4.91** | **0.00003** | **Stationary**     (Reject $H_0$) |\n",
+        "\n",
+        "* Before Transformation: The p-value was around 0.30. Since this is way bigger than 0.05, it confirmed that our original data was definitely not stationary.\n",
+        "\n",
+        "* After Transformation: After doing the log and the difference, the p-value dropped to 0.00003.\n",
+        "Since 0.00003 is tiny, we can say for sure that the data is stationary now. We also checked the ACF plot one last time.\n",
+        "\n",
+        "\\begin{figure}[h] \n",
+        "    \\centering \n",
+        "    \\includegraphics[width=0.8\\linewidth]{images/acf_after.png} \n",
+        "    \\caption{ACF after transformation ts} \n",
+        "    \\label{fig:acf_after} \n",
+        "\\end{figure}\n",
+        "\n",
+        "\n",
+        "\n",
+        "In Figure \\ref{fig:acf_after}, the difference is obvious. Unlike the first ACF plot that dragged on forever, this one cuts off really fast after the first lag. Most of the dots are inside the blue shaded area. This confirms that we successfully removed the trend and the unstable variance, so now we are finally ready to put this data into the ARIMA model.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Cross-Domain Dynamics: The Resilience of Cultural Sentiment"
       ]
     },
     {
