report update time series on stock price

--- a/report.ipynb
+++ b/report.ipynb
@@ -110,7 +110,7 @@
         "\n",
         "### Decomposition\n",
         "\n",
-        "After examining the trend, we knew the price had increased, but we needed to know how it went up. Was it just a normal seasonal thing? Or was something broken? To figure this out, we used ﻿a technique called Additive Decomposition.\n",
+        "After examining the trend, we knew the price had increased, but we needed to know how it went up. Was it just a normal seasonal thing? Or was something broken? To figure this out, we used decomposition.\n",
         "\n",
         "\\begin{figure}[h] \n",
         "    \\centering \n",
