Initial commit of report.tex: Added comprehensive document structure including sections on Abstract, Introduction, Related Work, Data, and two studies on musical sentiment and economic volatility. Included detailed analysis with figures, tables, and ARIMA modeling results.

--- a/report.ipynb
+++ b/report.ipynb
@@ -92,15 +92,10 @@
         "\n",
         "We first plotted Spotify’s monthly closing stock prices from 2018 to 2021 to get a general sense of how the market behaved over time. \n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/spotify_trend.png} \n",
-        "    \\caption{Original Spotify Stock Price Trend (2018-2021)} \n",
-        "    \\label{fig:spotify} \n",
-        "\\end{figure}\n",
+        "![Original Spotify Stock Price Trend (2018-2021)](images/spotify_trend.png){#fig-spotify width=80% fig-align=\"center\"}\n",
         "\n",
         "\n",
-        "From the figure \\ref{fig:spotify}, it is clear that the price does not follow a smooth or consistent linear trend.\n",
+        "From the figure @fig-spotify, it is clear that the price does not follow a smooth or consistent linear trend.\n",
         "\n",
         "1. We first plotted Spotify’s monthly closing stock prices from 2018 to 2021 to get a general sense of how the market behaved over time. From the figure, it is clear that the price does not follow a smooth or consistent linear trend.\n",
         "\n",
@@ -112,14 +107,9 @@
         "\n",
         "After examining the trend, we knew the price had increased, but we needed to know how it went up. Was it just a normal seasonal thing? Or was something broken? To figure this out, we used decomposition.\n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/decomposition_close_price.png} \n",
-        "    \\caption{decomposition of Spotify Stock Price Trend (2018-2021)} \n",
-        "    \\label{fig:decomp} \n",
-        "\\end{figure}\n",
+        "![decomposition of Spotify Stock Price Trend (2018-2021)](images/decomposition_close_price.png){#fig-decomp width=80% fig-align=\"center\"}\n",
         "\n",
-        "We plotted these components in Figure \\ref{fig:decomp}, and here is what we discovered:\n",
+        "We plotted these components in Figure @fig-decomp, and here is what we discovered:\n",
         "\n",
         "* Trend: This part of the decomposition merely illustrates the general direction. It confirms what we already knew—the price started skyrocketing in 2020. It was not a straight line, instead, it curved upwards very fast.\n",
         "\n",
@@ -142,19 +132,9 @@
         "\n",
         "We fisrt plotted the Lag Plots and the Autocorrelation Function to look at the internal patterns.\n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/lag.png} \n",
-        "    \\caption{Lag plot of the original time series} \n",
-        "    \\label{fig:lag} \n",
-        "\\end{figure}\n",
+        "![Lag plot of the original time series](images/lag.png){#fig-lag width=80% fig-align=\"center\"}\n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/acf_lag.png} \n",
-        "    \\caption{autocorrelation function of original ts} \n",
-        "    \\label{fig:acf_lag} \n",
-        "\\end{figure}\n",
+        "![autocorrelation function of original ts](images/acf_lag.png){#fig-acf_lag width=80% fig-align=\"center\"}\n",
         "\n",
         "Base on the figures we notices:\n",
         "\n",
@@ -169,12 +149,7 @@
         "\n",
         "To fix this heteroscedasticity, we applied a Logarithmic Transformation.\n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/log_transformation.png} \n",
-        "    \\caption{log transformation of original ts} \n",
-        "    \\label{fig:log} \n",
-        "\\end{figure}\n",
+        "![log transformation of original ts](images/log_transformation.png){#fig-log width=80% fig-align=\"center\"}\n",
         "\n",
         "* The blue line is the original price. You can clearly see the huge, messy spike in 2020 where the variance explodes.\n",
         "* The orange line is the log-transformed price. It looks much smoother and more consistent.\n",
@@ -187,16 +162,11 @@
         "\n",
         "To rigorously remove this remaining trend, we applied First-Order Differencing.\n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/difference.png} \n",
-        "    \\caption{first difference ts} \n",
-        "    \\label{fig:diff} \n",
-        "\\end{figure}\n",
+        "![first difference ts](images/difference.png){#fig-diff width=80% fig-align=\"center\"}\n",
         "\n",
         "By analyzing the change from one month to the next rather than the raw value, we isolated the stochastic component.\n",
         "\n",
-        "Figure \\ref{fig:diff} confirms the necessity of this step.\n",
+        "Figure @fig-diff confirms the necessity of this step.\n",
         "\n",
         "Unlike the log-series which drifted upwards, the differenced series oscillates consistently around zero.\n",
         "This transformation successfully detrended the data, leaving us with a pure \"growth rate\" metric that satisfies the strict stationarity requirements for autoregressive modeling.\n",
@@ -205,7 +175,7 @@
         "\n",
         "We conduct the Augmented Dickey-Fuller (ADF) test on the before and after transformation series:\n",
         "\n",
-        "**Table: ADF Stationarity Test Comparison**\n",
+        "**Table 1: ADF Stationarity Test Comparison**\n",
         "\n",
         "| Series | Test Statistic | p-value | Conclusion |\n",
         "| :--- | :--- | :--- | :--- |\n",
@@ -217,16 +187,53 @@
         "* After Transformation: After doing the log and the difference, the p-value dropped to 0.00003.\n",
         "Since 0.00003 is tiny, we can say for sure that the data is stationary now. We also checked the ACF plot one last time.\n",
         "\n",
-        "\\begin{figure}[h] \n",
-        "    \\centering \n",
-        "    \\includegraphics[width=0.8\\linewidth]{images/acf_after.png} \n",
-        "    \\caption{ACF after transformation ts} \n",
-        "    \\label{fig:acf_after} \n",
-        "\\end{figure}\n",
+        "![ACF after transformation ts](images/acf_after.png){#fig-acf_after width=80% fig-align=\"center\"}\n",
         "\n",
         "\n",
         "\n",
-        "In Figure \\ref{fig:acf_after}, the difference is obvious. Unlike the first ACF plot that dragged on forever, this one cuts off really fast after the first lag. Most of the dots are inside the blue shaded area. This confirms that we successfully removed the trend and the unstable variance, so now we are finally ready to put this data into the ARIMA model.\n"
+        "In Figure @fig-acf_after, the difference is obvious. Unlike the first ACF plot that dragged on forever, this one cuts off really fast after the first lag. Most of the dots are inside the blue shaded area. This confirms that we successfully removed the trend and the unstable variance, so now we are finally ready to put this data into the ARIMA model.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### ARIMA Modeling\n",
+        "\n",
+        "Now that the data is stationary, we could finally run the ARIMA model. We didn't know which parameters would be perfect, so we ran a grid search to test different combinations. To pick the winner, we just looked at the AIC score—basically, the lower the number, the better the model.\n",
+        "\n",
+        "**Table 2: ARIMA Model Comparison**\n",
+        "\n",
+        "| Model | AIC|\n",
+        "| :--- | :--- |\n",
+        "| ARIMA(1, 1, 0) | -60.172188 |\n",
+        "| ARIMA(3, 1, 0) | -59.056107 |\n",
+        "| ARIMA(3, 1, 1) | -57.422914 |\n",
+        "\n",
+        "Looking at the table, the ARIMA(1, 1, 0) model gave us the lowest score of -60.17. We tried more complex models like ARIMA(3, 1, 0) and ARIMA(3, 1, 1), but their scores were higher (-59.05 and -57.42), so they weren't worth the extra complexity.\n",
+        "\n",
+        "**Table 3: SARIMAX Result**\n",
+        "\n",
+        "| Parameter | coef | std err | z | P>\\|z\\| | [0.025 | 0.975] |\n",
+        "| :--- | :--- | :--- | :--- | :--- | :--- | :--- |\n",
+        "| **ar.L1** | 0.3159 | 0.156 | 2.026 | 0.043 | 0.010 | 0.621 |\n",
+        "| **sigma2** | 0.0108 | 0.003 | 3.745 | 0.000 | 0.005 | 0.016 |\n",
+        "\n",
+        "Based on the SARIMAX Result It showed an AR coefficient of 0.3159 with a p-value of 0.043, which means the relationship is statistically significant.\n",
+        "\n",
+        "\n",
+        "\n",
+        "### Residual Diagnostics\n",
+        "\n",
+        "![Residual Analysis](images/residual.png){#fig-residual width=60% fig-align=\"center\"}\n",
+        "\n",
+        "We plotted the residuals to see if the model missed anything.\n",
+        "\n",
+        "1. Standardized Residuals: Figure @fig-residual shows the reality. If you look at the top-left graph, the line is messy. You can see huge spikes around 2020 and 2021. This tells us that even with the best model, the variance during the pandemic was just too high to predict perfectly.\n",
+        "\n",
+        "2. Q-Q Plot: Next, look at the Q-Q plot. We want the blue dots to sit on the red line. Most of them do, but look at the tails—the dots peel away from the line at both ends. This confirms \"Heavy Tails.\" It means extreme events happened way more often than a normal statistical model expects.\n",
+        "\n",
+        "3. Correlogram: The only good news is in the bottom-right graph. All the dots stay inside the blue shaded area. This means there’s no pattern left in the errors, so mathematically, our model did its job correctly."
       ]
     },
     {
