data cleaning and collection report update

--- a/report.ipynb
+++ b/report.ipynb
@@ -50,14 +50,53 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Data Collection\n"
+        "### Data Collection\n",
+        "This project explores the change in emotional traits of popular music and the market performance of a leading streaming company before, during and after COVID-19. The project focuses on the 2017-2021 period, providing a unique viewpoint for interpreting shifts in cultural attitudes and financial turbulence associated with the pandemic. \n",
+        "Although earlier iterations of the project considered unemployment data as a macroeconomic indicator, the final analysis excluded unemployment data due to limited incremental insight and redundancy with other economic measures. Instead, the final dataset emphasizes **Spotify streaming behavior, song-level audio features, and Spotify stock price data**, which together provide a more direct connection between music consumption, emotional sentiment, and economic performance.\n",
+        "\n",
+        "**The final analysis uses three primary datasets:**\n",
+        "\n",
+        "**Dataset 1: Spotify Top 200 Chart Data**\n",
+        "* We used Spotify’s Top 200 global chart data to map out large-scale listening behavior and preference. All these features were recorded in the dataset, which represents the daily rankings of the most consumed songs found in the world. To decrease background noise and focus on the broad trends, we organized daily observations into monthly values which facilitate an accurate and consistent temporal comparison between pre-COVID, COVID, and post-COVID periods.\n",
+        "\n",
+        "**Dataset 2: Spotify Audio Features**\n",
+        "* Spotify Audio Features Data was combined with the chart data in order to estimate the emotional and acoustic properties of popular songs. Important features such as valence, energy, danceability, liveness, loudness, tempo and duration, are identified. These machine-learned features act as a quantitative indicator of musical sentiment and allow for formally perform statistical testing on such changes in emotional tone over time.\n",
+        "\n",
+        "**Dataset 3: Spotify Stock Price Data**\n",
+        "* We also incorporated monthly Spotify (SPOT) stock price data, to model firm market performance and sentiment within the market. This dataset enables comparison of music consumption patterns with financial market behavior, particularly during the COVID-19 period when abnormal volatility and structural shifts were observed If the data sources changed from previous study stages, our merging approach was identical. All datasets were aligned using standardized time variables, ensuring that results are driven by substantive changes in data rather than methodological differences.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Data Preprocessing"
+        "### Data Preprocessing/Cleaning\n",
+        "\n",
+        "Data cleaning focused on resolving inconsistencies across sources and preparing the data for time-series, hypothesis testing, and comparative analysis.\n",
+        "\n",
+        "**Standardization of Song Metadata**\n",
+        "\n",
+        "The Spotify Top 200 and audio feature datasets came from diverse entities where the naming conventions were not consistent. To prevent overlap between different datasets, titles and the names of the songs were standardized before merging them. For each of the song periods, duplicate entries of songs based on repeated appearances in the charts were aggregated into one observation per song.\n",
+        "\n",
+        "**Numeric Variable Cleaning**\n",
+        "\n",
+        "Several numeric variables (e.g. streaming counts, audio feature values) were stored as strings or formatted fields with commas. The non-numeric characters were removed and converted into numeric numbers in these variables. Invalid entries are given by their missing values to avoid bias or computational errors.\n",
+        "\n",
+        "**Date Processing and Temporal Alignment**\n",
+        "\n",
+        "Chart data contained a “week of highest charting” variable as a date range. This variable was processed into start and end dates and using the starting date to act as the main temporal reference. All date variables had been changed to datetime objects and been reformatted into a year-month pattern to achieve uniformities of aggregation and to support monthly stock price data.\n",
+        "\n",
+        "**Aggregation and Merging**\n",
+        "\n",
+        "In order to see the bigger picture and diminish short-term volatility, daily chart data was consolidated to the monthly level. The month-to-month Spotify stock prices were then combined with the music dataset using the same year-month key. Data integrity was ensured by excluding records where irreconcilable missing time values were present.\n",
+        "\n",
+        "\n"
       ]
     },
     {
