--- a/report.ipynb
+++ b/report.ipynb
@@ -25,6 +25,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This project aims to explore the relationship between emotional trends in popular music and U.S. economic conditions. Specifically, this project examines, before and during the COVID-19 pandemic, how the emotional characteristics of popular music evolved and the financial performance of the music streaming industry. Since music is a representation of emotions, we used Spotify Top 200 chart data from 2017 to 2021 to explore whether specific emotions trigger changes in the taste of music by measuring song-level audio features, such as valence, energy, and danceability. Also, since the taste of music changes, we examine changes in cultural sentiment and economic volatility using music features alongside monthly Spotify stock price data. \n",
+        "\n",
+        "We applied statistical methods, including t-tests, one-way ANOVA, chi-square tests, and bootstrap confidence intervals, to find that although some music features showed statistically significant differences before and during the pandemic. Besides the emotional valence, which shows substantial differences, the magnitude of these differences for other music features is small and inconsistent. Later, we applied time-series analysis to demonstrate further that musical emotional valence lacked a predictable temporal structure. \n",
+        "\n",
+        "Moreover, we also analyzed Spotify's stock price using decomposition, autocorrelation analysis, stationarity tests, and ARIMA models. The results demonstratea sharp upward trend and abnormal volatility in stock prices during the pandemic, indicating a significant change during the pandemic for the music stock market. However, the ARIMAX model showed that musical emotions did not predict consumer sentiment."
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -288,8 +299,6 @@
       "metadata": {},
       "source": [
         "# Conclusion\n",
-        "\n",
-        "## Key Findings\n",
         "\n",
         "\n",
         "\n",
