Finish related work section

--- a/report.ipynb
+++ b/report.ipynb
@@ -47,7 +47,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Related Work"
+        "When we listen to a song we have heard before, it often brings back the scene and emotions we felt the first time we heard it. Music has a unique ability to capture personal moments while also reflecting broader collective experiences. Therefore, we wonder whether the patterns of emotions in popular music change in response to social and economic pressures. Also, prior research shows that during recessions, societies shift toward more positive music[1](Palomeque et al. 2024). Hence, we focus on the COVID-19 pandemic because during this period, there is a simultaneous emotional disruption and economic uncertainty on a global scale. During this time of crisis, financial markets reacted rapidly to uncertainty, reflecting shifts in public confidence, expectations, and risk. Because stock prices capture collective economic sentiment, we use Spotify’s stock performance as an economic indicator to examine whether changes in musical sentiment align with changes in economic conditions. Therefore, we hope by studying music emotion and stock market behavior together, we aim to assess whether cultural sentiment and economic stress move in tandem during periods of extreme disruption."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Related Work\n",
+        "\n",
+        "Prior research shows that the public's music preferences shift during economic and social adversity. Using large-scale music consumption data, Palomeque et al. found that listeners tend to prefer positive music during economic and social adversity [1](Palomeque et al. 2024). Palomeque et al.'s results suggest that during economic downturns and periods of social instability, people's music preferences change with their emotions.\n",
+        "\n",
+        "Also, there are studies that have examined how COVID-19 affected stock market performance within the music industry itself. Hu and Kim analyze the log-returns of stocks for representative music companies such as Live Nation Entertainment, Tencent Music Entertainment, and Warner Music Group, and observe that early in the pandemic, music-industry stock indices declined and exhibited a negative relationship, while correlations in returns changed after vaccines became widely available [2](Hu & Kim 2022).\n",
+        "\n",
+        "However, despite these parallel findings, existing research has largely studied musical sentiment and financial markets in isolation. Thus, studying the relationship between music features and economic indicators together helps us understand how the music responds to economic disruption."
       ]
     },
     {
@@ -449,7 +462,11 @@
       "source": [
         "# References\n",
         "\n",
-        "[1] Dehghani, M., Gouws, S., Vinyals, O., Uszkoreit, J., & Kaiser, Ł. (2018). Universal Transformers. *arXiv preprint arXiv:1807.03819*."
+        "[1] Palomeque, M., & de-Lucio, J. (2024). The Soundtrack of a Crisis: More Positive Music Preferences During Economic and Social Adversity. Journal of Happiness Studies, 25(5), 44. https://doi.org/10.1007/s10902-024-00757-4\n",
+        "\n",
+        "[2] Hu, Y., & Kim, J. (2022). The impact of COVID-19 on the music industry: Evidence from stock market returns. Journal of Risk and Financial Management, 1(4), 30. https://doi.org/10.3390/jrfm1040030\n",
+        "\n",
+        "[3] Dehghani, M., Gouws, S., Vinyals, O., Uszkoreit, J., & Kaiser, Ł. (2018). Universal Transformers. *arXiv preprint arXiv:1807.03819*."
       ]
     },
     {
